--- a/styles/Table.module.css
+++ b/styles/Table.module.css
@@ -9,30 +9,30 @@
     padding: 0.5rem;
     margin: 0.5rem;
     border-radius: 5px;
-    border: 1px solid #2563eb;
-    color: #2563eb;
+    border: 1px solid rgb(2 132 199);
+    color: rgb(2 132 199);
     cursor: pointer;
   }
   
   .paginationBttns a:hover {
     color: white;
-    background-color: #2563eb;
+    background-color: rgb(2 132 199);
   }
   
   .paginationActive a {
     color: white;
-    background-color: #2563eb;
+    background-color: rgb(2 132 199);
   }
   
   .paginationDisabled a {
-    color: grey;
+    color: skyblue;
     background-color: transparent;
     border: transparent;
   }
 
   .paginationDisabled a:hover {
 
-    color: grey;
+    color: skyblue;
     background-color: transparent;
   }
 
