--- a/styles/Table.module.css
+++ b/styles/Table.module.css
@@ -1,51 +1,53 @@
 .paginationBttns {
-    height: 40px;
-    list-style: none;
-    display: flex;
-    justify-content: center;
-  }
+  display:flex ;
+  background-color:  rgb(7 89 133);
+  border-radius: 5px;
+}
+
+.paginationBttns a {
+  color: white;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
   
+}
+
+.paginationBttns a:hover {
+  color: rgb(7 89 133);;
+  background-color:  rgb(125 211 252);;
+ border-radius: 5px;
+}
+
+.paginationActive a {
+   background-color:  rgb(125 211 252);
+  color:rgb(7 89 133); ;
+  border-radius: 5px;
+
+}
+.paginationActive a:hover {
+  color:rgb(7 89 133);
+  background-color:  rgb(125 211 252);
+  
+}
+
+.paginationDisabled a {
+  color: white;
+  background-color: transparent;
+  border: transparent;
+}
+
+
+
+@media only screen and (max-width: 443px) {
   .paginationBttns a {
-    padding: 0.5rem;
-    margin: 0.5rem;
-    border-radius: 5px;
-    border: 1px solid rgb(2 132 199);
-    color: rgb(2 132 199);
-    cursor: pointer;
-  }
-  
-  .paginationBttns a:hover {
-    color: white;
-    background-color: rgb(2 132 199);
-  }
-  
-  .paginationActive a {
-    color: white;
-    background-color: rgb(2 132 199);
-  }
-  
-  .paginationDisabled a {
-    color: skyblue;
-    background-color: transparent;
-    border: transparent;
-  }
-
-  .paginationDisabled a:hover {
-
-    color: skyblue;
-    background-color: transparent;
-  }
-
-  @media only screen and (max-width: 443px) {
-    .paginationBttns a {
-        margin: 0.2rem;
-      }    
-  }
-  @media only screen and (max-width: 379px) {
-    .paginationBttns a {
-        margin: 0.3rem;
-        padding: 0.3rem;
-        padding-right: 0.4rem;
-        padding-left: 0.4rem;
-      }    
-  }
+      margin: 0.2rem;
+    }    
+}
+@media only screen and (max-width: 379px) {
+  .paginationBttns a {
+      margin: 0.3rem;
+      padding: 0.3rem;
+      padding-right: 0.4rem;
+      padding-left: 0.4rem;
+    }    
+}
